# DeltaImage

./: CMakeLists.txt  Differentiate.cpp  Differentiate.hpp  Filter.cpp  Filter.hpp  Image.hpp  README.md  Run.bat  main.cpp
testImages/output/: diff.json
testImages/output/filteredData/: filtered.json
